--- a/NecroDeck/NecroDeck.csproj
+++ b/NecroDeck/NecroDeck.csproj
@@ -44,13 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CardMetaData.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="DeckPlayer.cs" />
     <Compile Include="Global.cs" />
+    <Compile Include="Cards\LotusPetal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueWrapper.cs" />
     <Compile Include="Rules.cs" />
+    <Compile Include="StackWrapper.cs" />
     <Compile Include="State.cs" />
+    <Compile Include="StructureWrapper.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
