Separated all cards to their own class.

--- a/NecroDeck/NecroDeck.csproj
+++ b/NecroDeck/NecroDeck.csproj
@@ -45,10 +45,38 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CardMetaData.cs" />
+    <Compile Include="Cards\BeseechTheMirror.cs" />
+    <Compile Include="Cards\BigScore.cs" />
+    <Compile Include="Cards\BorneUponAWind.cs" />
+    <Compile Include="Cards\CabalRitual.cs" />
+    <Compile Include="Cards\ChromeMox.cs" />
+    <Compile Include="Cards\DarkRitual.cs" />
+    <Compile Include="Cards\ElectroDominance.cs" />
+    <Compile Include="Cards\ElvishSpiritGuide.cs" />
+    <Compile Include="Cards\GaeasWill.cs" />
+    <Compile Include="Cards\GemstoneMine.cs" />
+    <Compile Include="Cards\Grief.cs" />
+    <Compile Include="Cards\InfernalTutor.cs" />
+    <Compile Include="Cards\LionsEyeDiamond.cs" />
+    <Compile Include="Cards\ManaMorphose.cs" />
+    <Compile Include="Cards\MoxOpal.cs" />
+    <Compile Include="Cards\Necrodominance.cs" />
+    <Compile Include="Cards\Necrologia.cs" />
+    <Compile Include="Cards\Necropotence.cs" />
+    <Compile Include="Cards\PactOfNegation.cs" />
+    <Compile Include="Cards\SimianSpiritGuide.cs" />
+    <Compile Include="Cards\SummonersPact.cs" />
+    <Compile Include="Cards\TendrilsOfAgony.cs" />
+    <Compile Include="Cards\TreeOfTales.cs" />
+    <Compile Include="Cards\ValakutAwakening.cs" />
+    <Compile Include="Cards\VaultOfWhispers.cs" />
+    <Compile Include="Cards\WildCantor.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="DeckPlayer.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Cards\LotusPetal.cs" />
+    <Compile Include="Mana.cs" />
+    <Compile Include="MetaData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueWrapper.cs" />
